--- a/ressources/style.css
+++ b/ressources/style.css
@@ -122,6 +122,8 @@ h1 {
     margin-bottom: 10px;
     max-width: 80%;
     max-height: 50%;
+    height: auto;
+    width: auto;
 }
 
 .day-gift-content > input {
